# TTRPG_Story_Narrator

./: .gitignore  README.md  SampleOutput.txt  TODO.md  pyproject.toml  requirements.lock.txt  requirements.txt
scripts/: diag_temp.py
tests/: test_writer.py
ttrpg_narrator/: __init__.py  cli.py  joiner.py  transcriber.py  writer.py
